// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with custom props 1`] = `
<div
  class="layout row justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <svg
                height="30"
                viewBox="0 0 50 40"
                width="30"
              >
                <points-line-path-stub
                  curveOffset="0.6"
                  fill="transparent"
                  points="[object Object],[object Object]"
                  stroke="currentColor"
                  stroke-width="2"
                  type="line"
                />
              </svg>
              <input
                aria-readonly="false"
                autocomplete="on"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="line"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="verticalCurve"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="horizontalCurve"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="leftCurvedAngle"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="rightCurvedAngle"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="rightElbow"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="leftElbow"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="verticalStepped"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="horizontalStepped"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default averagePoints 1`] = `
<div
  class="layout row justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <svg
                height="30"
                viewBox="0 0 50 40"
                width="30"
              >
                <points-line-path-stub
                  curveOffset="0.6"
                  fill="transparent"
                  points="[object Object],[object Object]"
                  stroke="currentColor"
                  stroke-width="2"
                  type="line"
                />
              </svg>
              <input
                aria-readonly="false"
                autocomplete="on"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default averagePoints 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="line"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="verticalCurve"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="horizontalCurve"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="leftCurvedAngle"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="rightCurvedAngle"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="rightElbow"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="leftElbow"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="verticalStepped"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="horizontalStepped"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default props 1`] = `
<div
  class="layout row justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-text-field v-select v-input--hide-details theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="on"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="line"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="verticalCurve"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="horizontalCurve"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="leftCurvedAngle"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="rightCurvedAngle"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="rightElbow"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="leftElbow"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="verticalStepped"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="30"
            viewBox="0 0 50 40"
            width="30"
          >
            <points-line-path-stub
              curveOffset="0.6"
              fill="transparent"
              points="[object Object],[object Object]"
              stroke="currentColor"
              stroke-width="2"
              type="horizontalStepped"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
